[gd_scene load_steps=3 format=3 uid="uid://c3st8e7ug4fwj"]

[ext_resource type="Script" uid="uid://b8elvkd6pwc57" path="res://script/carta.gd" id="1_xysof"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fw410"]
size = Vector2(164, 240)

[node name="Carta" type="Node2D"]
script = ExtResource("1_xysof")

[node name="Area" type="Area2D" parent="."]

[node name="Colisao" type="CollisionShape2D" parent="Area"]
shape = SubResource("RectangleShape2D_fw410")

[node name="Sprite" type="Sprite2D" parent="."]

[connection signal="input_event" from="Area" to="." method="_on_area_input_event"]
[connection signal="mouse_entered" from="Area" to="." method="_on_area_mouse_entered"]
[connection signal="mouse_exited" from="Area" to="." method="_on_area_mouse_exited"]
